--- a/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/MenuPageFolder/NewMenuPage.xaml
@@ -289,6 +289,7 @@
                                         FontSize="30"
                                         Margin="0 10 0 10"/>
                                     <ListView
+                                        Width="881"
                                         ToolTip="Используемые ингредиенты"
                                         HorizontalAlignment="Left"
                                         Height="auto"
@@ -349,6 +350,7 @@
                                         FontSize="30"
                                         Margin="0 10 0 10"/>
                                     <ListView
+                                        Width="881"
                                         ToolTip="Выберите используемые ингредиенты"
                                         Height="auto"
                                         MinHeight="0"
