--- a/DesctopHITE/PerformanceFolder/UserControlFolder/ListBasketUserControl.xaml
+++ b/DesctopHITE/PerformanceFolder/UserControlFolder/ListBasketUserControl.xaml
@@ -6,6 +6,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="160"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Image
+            Grid.Column="0"
+            Source="{Binding ImageMenuTable.Image_ImageMenu}"
+            Width="150"
+            Stretch="Uniform"
+            Height="150"/>
     </Grid>
 </UserControl>
