--- a/DesctopHITE/PerformanceFolder/WindowsFolder/MainCashWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/MainCashWindow.xaml
@@ -52,6 +52,7 @@
                     </StackPanel>
                 </Button>
                 <Button 
+                    Click="BasketButton_Click"
                     FontSize="40"
                     HorizontalAlignment="Center"
                     Margin="0 0 0 0"
