--- a/DesctopHITE/PerformanceFolder/WindowsFolder/BasketWindow.xaml
+++ b/DesctopHITE/PerformanceFolder/WindowsFolder/BasketWindow.xaml
@@ -7,7 +7,6 @@
     mc:Ignorable="d"
     WindowStartupLocation="CenterScreen" 
     IsVisibleChanged="Window_IsVisibleChanged"
-    xmlns:UserControl ="clr-namespace:DesctopHITE.PerformanceFolder.UserControlFolder"
     Style="{StaticResource MainCashWinwosStyle}">
     <Border 
         Name="BodyBorder"
@@ -22,17 +21,48 @@
                 x:Name="MainBasketListView"
                 Grid.Row="0"
                 VerticalAlignment="Top"
-                Margin="10"
-                Width="1300"
-                HorizontalAlignment="Center">
+                Margin="20"
+                Width="1500"
+                ItemContainerStyle="{StaticResource NoSelected}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <UserControl:ListBasketUserControl/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="160"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Grid.Column="0"
+                                Source="{Binding MenuTable.ImageMenuTable.Image_ImageMenu}"
+                                Width="150"
+                                Stretch="Uniform"
+                                Height="150"/>
+                            <Grid Margin="10 0 0 0" Grid.Column="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1120"/>
+                                    <ColumnDefinition Width="200"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock
+                                    Grid.Column="0"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    FontSize="30"
+                                    Text="{Binding MenuTable.Name_Menu}"
+                                    HorizontalAlignment="Left"/>
+                                <TextBlock
+                                    x:Name="PriseTextBlock"
+                                    Grid.Column="2"
+                                    Style="{DynamicResource MainStyleTextBlock}"
+                                    FontSize="30"
+                                    Text="{Binding Prise_MenuCheque}"/>
+                            </Grid>
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Button 
+                    x:Name="GoBackButton"
+                    Click="GoBackButton_Click"
                     FontSize="40"
                     HorizontalAlignment="Right"
                     Margin="0 0 10 0"
@@ -50,6 +80,8 @@
                     </StackPanel>
                 </Button>
                 <Button 
+                    x:Name="TransactionButton"
+                    Click="TransactionButton_Click"
                     FontSize="40"
                     HorizontalAlignment="Center"
                     Margin="10 0 0 0"
